json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,31 @@
 {
  "items": [
   {
+    "id": "D61DykqHQwGqqcVdsbqzaA",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "hackernews",
+    "url": "https://news.ycombinator.com/item?id=17023633",
+    "title": "Density | http://density.io | Syracuse + NYC + San Francisco | On-site or Remote | Full-time | $100k-$150k + equity == What we build Density ...",
+    "content": "<div>                  <span>Density | <a href='http://density.io' rel='nofollow'>http://density.io</a> | Syracuse + NYC + San Francisco | On-site or Remote | Full-time | $100k-$150k + equity<p>== What we build</p><p>Density combines a powerful people counter, a modern API, a dedication to privacy, and a Sensor-as-a-Service business model. The system’s self-installable sensors can be added above any relevant door or entryway. Users then access always-on people count through our real-time API, allowing them to measure and understand their physical space.</p><p>== DevOps Engineer ===</p><p>- Strong writing skills; ability to craft clear and concise documentation- Strong background in Linux/Unix Administration- Experience with automation and configuration management using Ansible, Chef, Puppet or an equivalent- Experience with deployment orchestration using Nomad, Consul, and Docker- Knowledge of the AWS stack- Ability to design and manage CI / CD pipelines (CircleCi)- Strong grasp of modern Python development- Experience with management of networking and VPNs- Experience managing software change control and software review systems such as Gerrit- Experience managing software releases across multiple git repositories- Experience with relational, non-relational, and timeseries data stores</p><p>== Apply ==</p><p><a href='https://jobs.lever.co/density/dfa1c881-52ba-4088-bec1-a85f2a9f83b6?lever-source=hn' rel='nofollow'>https://jobs.lever.co/density/dfa1c881-52ba-4088-bec1-a85f2a...</a><span>              </span></p><div>        <p>                      <u></u>                        </p></div></span></div>",
+    "urlFetchPending": false,
+    "published": "May 8, 2018 9:54:08 PM",
+    "tags": [
+      "REMOTE1/100",
+      "TECH1/python",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "python"
+    ]
+  },
+  {
     "id": "U4lb6J3WQGqIfUw1CTFmGA",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
@@ -794,6 +819,37 @@
     ],
     "tagsNames2": [
       "unknown"
+    ]
+  },
+  {
+    "id": "0avesdEoRO6e5ByUtiZt2g",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "angel.co",
+    "url": "https://angel.co/savant-care/jobs/105661-psychiatrist",
+    "title": "Psychiatrist",
+    "content": "<div><h2>Psychiatrist at Savant Care</h2><div>Los Altos, San Francisco Bay Area, Santa Monica, Remote · Full Time</div><div></div></div><div><div>Compensation</div><div>$300K–$380K<br>0.01%–0.02%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>About Savant Care:<br>Tech savvy behavioral health clinic is seeking to add psychiatrists to our team.</p><p>At Savant Care, we track and predict mental health using artificial intelligence.</p><p>We integrate our cutting-edge technology into clinical practice to improve quality and efficiency of mental health care.</p><p>Our organization has 5 clinics across Northern and Southern California, and we're actively expanding. We are currently looking to hire in San Francisco, San Jose and Santa Monica.</p><p>Requirements:<br>1. Board certified, OR</p><p>2. Board Eligible (with a plan/schedule to take the appropriate boards within the next 1 year.)</p><p>Job Description:<br>Manage a patient portfolio. Use the latest mental health technology and help develop it.</p><p>Benefits:<br>- Providers can choose their own vacation and work schedules, but must commit to a minimum of 20 patient hours/ week<br>- No Call and No Weekends<br>- Full time administrative assistant provided<br>- All marketing, billing, tech support, and other non-clinical functions provided by organization<br>- Collaborative work environment with other psychiatrists and therapists<br>- 100% Outpatient practice.</p><p>Job Types: Full-time, Part-time, Contract</p><p>Salary: $300,000.00 to $400,000.00 /year</p></div>",
+    "urlFetchPending": false,
+    "published": "Apr 9, 2018 10:36:48 PM",
+    "tags": [
+      "Full Time",
+      "Los Altos",
+      "Product Manager",
+      "REMOTE1/100",
+      "Remote OK",
+      "San Francisco Bay Area",
+      "Santa Monica",
+      "TECH1/bigdata-ml",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "bigdata-ml"
     ]
   },
   {
@@ -1800,33 +1856,6 @@
     ],
     "tagsNames2": [
       "unknown"
-    ]
-  },
-  {
-    "id": "n-_8NdWVQeu-ew81ug888Q",
-    "source": {
-      "contentTransform": "TEXT_STRIP_FORMATTING",
-      "jobAdContentRegExp": ""
-    },
-    "sourceName": "workinstartups-designers",
-    "url": "http://workinstartups.com/job-board/job/66089/digital-designer-home-based-full-time-at-jago/",
-    "title": "Digital Designer Home based | Full Time",
-    "content": "Jago are looking for a Digital Designer to join the family. Unlike most agencies, there is no commute due to our unique remote working model. We believe you should work where you are most comfortable and more importantly, most inspired. All we ask is that you are within a 30 mins commute to Guildford for when we do meet up. We like to get together regularly to work on larger projects, catch up over coffee and celebrate successes. <br /><br />This role offers a range of different opportunities to grow. You will have a big say over the creative department and the direction it goes in. Jago is a lifestyle company that cares about your growth and your ability to learn and achieve the things you want to achieve.<br /><br />This role will require you to be experienced in Web Design, UX/UI, branding and to have a good understanding of print. You will need to be a self-motivated, driven person who keeps their finger on the pulse of latest trends in the world of digital. You will have an outstanding eye for detail and manage your time efficiently. You will trust your initiative and guide a developers on your vision for digital products. You will be a confident, strong communicator and confident with meeting clients with the team and alone.<br /><br /><br />Technical Requirements<br /><br /><br />- Minimum of 4 years experience in digital design<br />- Natural ability for designing products that are responsive across all platforms<br />- Great working knowledge of Wordpress CMS<br />- Adobe Illustrator, Photoshop and InDesign<br />- Sketch<br />- A good understanding of Invision<br />- A good understanding of Mailchimp<br />- A strong portfolio of digital and branding work<br /><br /><br />It would be an added bonus if you have the following: <br /><br />- Final Cut Pro or After Effects Experience<br />- Basic knowledge of HTML & CSS<br />- Experience in photography<br />- A good understanding of Dotmailer<br /><br />Culture & Benefits<br /><br />Work remotely:<br /><br />We believe you should work where you are most inspired. Autonomy fuels productivity.<br /><br /><br />Speak your mind:<br /><br />The Jago culture encourages you to be yourself and allows you to bring all your ideas to the table. We want you to be an influencer and make your mark on a project.<br /><br /><br />“Be better budget”:<br /><br />Self development is vital, so we give you a budget to spend on learning and development.<br /><br /><br />We grow; you grow:<br /><br />We want you to earn as much as your potential allows, so as our business grows and you develop, your wage will too.<br /><br /><br />Teamwork:<br /><br />We always communicate, inspire and help each other. We are a family.<br /><br /><br />Additional holiday:<br /><br />Great performance is rewarded with additional holiday.<br /><br /><br />Enjoy:<br /><br />We want to enjoy what we do and it’s important to have fun. Whether it’s a running morning, lunch in London or Christmas parties, we have plenty of fun.<br /><br /><br />Startup mentality:<br /><br />Help shape your department. Be part of a team who think for the future.<br /><br /><br />Contact us now for an exciting opportunity!",
-    "urlFetchPending": false,
-    "published": "Feb 23, 2018 12:00:00 AM",
-    "tags": [
-      "REMOTE1/100",
-      "TECH1/frontend",
-      "TECH1/php",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "frontend",
-      "php"
     ]
   }
 ]
